@@ -1,3 +1,7 @@
+2006-04-17 Daniel Perez <daniel@gforgegroup.com>
+	* Applied patch : Many fixes for massmail.php
+		http://gforge.org/tracker/?func=detail&aid=2255&group_id=1&atid=106
+
 2006-04-01 Tim Perdue   <tim@gforgegroup.com>
 
 	* purging unused strings and unmaintained language files 
